[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "nox>=2022.11.21",
    "pre-commit>=2.21.0",
    "black>=23.3.0",
    "pytest>=7.2.2",
]

[project]
name = "ascii-tree"
version = "0.1.0"
description = "Generate ASCII representations of tree-like data"
authors = [
    {name = "sharpencrag", email = "ed.whetstone@gmail.com"},
]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
